--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Welcome to Chantel's Homepage!</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Aloha!</h1>
+				<p>I am a Data Scientist with a background in Mathematics, Oceanography, Business and Healthcare and 5 years of experience in working with big data. I love to code and work with large data sets to discover new patterns and trends in healthcare, education, environment, and tech. I consider myself as a life-long learner and find great joy in problem solving, helping others and learning programming languages. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:islandsurfccc@gmail.com">email</a></li>
+        		<li><a href="https://github.com/chantel808">github.com/chantel808</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
