--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Aloha!</h1>
+        		<h1>Chantel Clark</h1>
 				<p>I am a Data Scientist with a background in Mathematics, Oceanography, Business and Healthcare and 5 years of experience in working with big data. I love to code and work with large data sets to discover new patterns and trends in healthcare, education, environment, and tech. I consider myself as a life-long learner and find great joy in problem solving, helping others and learning programming languages. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
