--- a/CV/index.html
+++ b/CV/index.html
@@ -2,5 +2,8 @@
 layout: default
 title: Chantel's CV
 ---
+<html>
 <iframe src="https://resume.creddle.io/embed/5nyegdf1ww1"
   width="850" height="1100" seamless></iframe>
+
+</html>
