--- a/CV/index.html
+++ b/CV/index.html
@@ -1,9 +1,9 @@
-<!--
 ---
 layout: default
 title: Chantel's CV
 ---
--->
 
+<div class="iframe_container">
 <iframe src="https://resume.creddle.io/embed/5nyegdf1ww1"
   width="850" height="1100" seamless></iframe>
+</div>
