--- a/about/index.html
+++ b/about/index.html
@@ -2,16 +2,17 @@
 layout: default
 title: About Me
 ---
+<h1> About Me </h1>
 
 <p>
-I was born and raised in Honolulu, and am passionate about data science and analytics. I took an unconventional pathway to data science and analytics, but enjoyed every step of the way. 
+I was born and raised in Honolulu, and am passionate about data science and analytics. It has been an unusual pathway to data science and analytics, but I have enjoyed every step of the way. 
 </p>
 
 <p>
 Although I wasn't exceptionally great at math until high school, I always had fun with it and thought of math problems as a puzzle. Extremely persistent with a 'never give up' attitude, and a knack for learning from my mistakes, I actually became very strong in math and it quickly became my favorite subject in school (along with Chinese). </p>
 
 <p>
-I initially went to the University of Southern California (USC) declared as an engineering major, because I heard that they use a lot of math. However, after fulfuilling my calculus requirements, I lost interest in engineering, and decided that I loved the philosophy of occupational therapy (OT). At the time, USC was ranked as the top college to study OT. Studying OT allowed me to learn about the healthcare system and analyze human anatomy and function. As an occupational therapist, I helped patients in hospitals, nursing rehabs, and pediatric clinics to achieve indepenedence in the things that were most important to them (self-care, cooking, socializing with friends, etc.). While the career was extremely rewarding, I found myself wondering about what I could have done if I had studied mathematics. </p>
+I initially went to the University of Southern California (USC) declared as an engineering major, because I heard that they use a lot of math. However, after fulfilling my calculus requirements, I lost interest in engineering, and decided that I loved the philosophy of occupational therapy (OT). At the time, USC was ranked as the top college to study OT. Studying OT allowed me to learn about the healthcare system and analyze human anatomy and function. As an occupational therapist, I helped patients in hospitals, nursing rehabs, and pediatric clinics to achieve indepenedence in the things that were most important to them (self-care, cooking, socializing with friends, etc.). While the career was extremely rewarding, I found myself wondering about what I could have done if I had studied mathematics. </p>
 
 <p>
 During this time, I became deeply enamored with the ocean. I had always loved the ocean, but during this period of life, I spent almost every day in the ocean surfing, swimming, diving, or outrigger canoe paddling. I was never the most athletic person (the only sport I did in high school was bowling), but I somehow made the paddling team to cross the Ka'iwi channel (from Moloka'i to O'ahu) in the Na Wahine race. This is one of my biggest personal accomplishments, because the Na Wahine race is one of the most prestigious races! I had never even dreamed that I could do it, but I did it... because I don't give up. </p>
