Attempt to fix cv

--- a/CV/index.html
+++ b/CV/index.html
@@ -3,7 +3,4 @@ layout: default
 title: Chantel's CV
 ---
 
-<div class="iframe_container">
-<iframe src="https://resume.creddle.io/embed/5nyegdf1ww1"
-  width="850" height="1100" seamless></iframe>
-</div>
+<iframe src="https://resume.creddle.io/embed/5nyegdf1ww1" width="850" height="1100" seamless></iframe>
