--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Chantel's Homepage
 ---
  <div class="blurb">	
     <h1>Chantel Clark</h1>
-	<p>I am a Data Scientist with a background in Mathematics, Oceanography, Business and Healthcare and 5 years of experience in working with data. I love to code and work with large data sets to discover new patterns and trends in healthcare, education, environment, and tech. I consider myself as a lifelong learner and find great joy in problem solving, helping others and learning programming languages. <a href="/about">Read more about my life...</a></p>
+	<p>I am a Data Scientist with a background in mathematics, oceanography, business and healthcare. With 5 years of experience in research and working with large data sets, I am passionate about leveraging data to improve socioeconomic equity and justice and helping others to gain insights about their data. Highly-driven and disciplined, I am a lifelong learner and find great joy in working with others on a team, solving problems, and learning different programming languages. <a href="/about">Read more about my life...</a></p>
 </div> <!-- /.blurb -->
